<resources>
  <string name="app_name">Workout-Logger</string>
  <string name="new_workout">New Workout</string>
  <string name="start_workout">Start Workout</string>
  <string name="new_user">New User</string>
  <string name="user_information">User Information</string>
  <string name="user_first_name">Name:</string>
  <string name="user_first_name_placeholder">John</string>
  <string name="user_last_name">Last Name:</string>
  <string name="user_last_name_placeholder">Smith</string>
  <string name="user_age">Age:</string>
  <string name="user_age_placeholder">24</string>
  <!-- See https://en.wikipedia.org/wiki/Sex_and_gender_distinction -->
  <string name="user_sex">Sex:</string>
  <string name="user_sex_placeholder">Man</string>
  <string name="create_user">Create User</string>
  <string name="user_create_success_message">User added successfully</string>
  <string name="all_users">All Users</string>
  <string name="workout_image_description">The workout image</string>
  <string name="pushup_description">Description of the exercise…</string>
  <string name="finish">Finish</string>
  <string name="total_pushups">Total pushups:</string>
  <string name="total_pushups_placeholder">20</string>
  <string name="correct_pushups">Correct repetitions:</string>
  <string name="correct_pushups_placeholder">18</string>
  <string name="workouts_report">Workouts Report</string>
  <string name="workout_total">Total:</string>
  <string name="workout_correct">Correct:</string>
  <string name="sex_male">Male</string>
  <string name="sex_female">Female</string>
  <string name="sex_other">Other</string>
</resources>
